[tool.poetry]
name = "onetwo-reporting"
version = "0.1.0"
description = ""
authors = ["Thomas Schmitt <t.e.schmitt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
jupyterlab = "^3.2.4"
matplotlib = "^3.5.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
